2015-04-11 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-render-balances-page.c,
	* src/ui/ofa-render-balances-page.h: new ofaRenderBalancesPage class.

	* src/ui/ofa-irenderable.c,
	* src/ui/ofa-irenderable.h: new ofaIRenderable interface.

2015-04-10 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-render-balances-bin.c,
	* src/ui/ofa-render-balances-bin.h,
	* src/ui/ofa-render-balances-bin.ui: new ofaRenderBalancesBin class.

	* src/ui/ofa-render-page.c,
	* src/ui/ofa-render-page.h,
	* src/ui/ofa-render-page.ui: new ofaRenderPage class.

	* src/ui/ofa-dos-menubar.ui,
	* src/ui/ofa-main-window.c: change "pdf-" action prefix with "render-".

	* src/ui/ofa-main-window.h: introduce new (future) theme identifiers.

	* src/ui/ofa-iprintable2.c,
	* src/ui/ofa-iprintable2.h: new ofaIPrintable interface.

2015-04-08 Pierre Wieser <pwieser@trychlos.org>

	Review ofaDateFilterBin API, moving it to ofaDatesFilterHVBin class
	and ofaIDatesFilter interface (todo #788).

	* src/ui/ofa-idates-filter.c,
	* src/ui/ofa-idates-filter.h: new files.

	* src/ui/ofa-date-filter-bin.c: renamed as src/ui/ofa-dates-filter-hv-bin.c
	* src/ui/ofa-date-filter-bin.h: renamed as src/ui/ofa-dates-filter-hv-bin.h
	* src/ui/ofa-date-filter-bin.ui: renamed as src/ui/ofa-dates-filter-hv-bin.ui

	* src/ui/ofa-pdf-balances.c,
	* src/ui/ofa-reconciliation.c,
	* src/ui/ofa-view-entries.c: updated accordingly.

2015-04-07 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-guided-input-bin.c:
	- make entries insensitive while no operation template is defined.
	- fix dates check format (todo #789).

2015-04-06 Pierre Wieser <pwieser@trychlos.org>

	* src/core/ofo-account.c: fix account validity check.

2015-04-03 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-view-entries.c:
	- no more modifiy operation date when checking effect date (todo #785).
	- try to improve responsiveness.

	* src/ui/ofa-view-entries.c:
	- do not try to compute balances while currency if not set (todo #786)